platform-infra/gitops-k8s/platform-components/components/common-gateways/prod/default-gateways.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-default-external
  namespace: platform-gateways
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      name: https-default-gw-external-params
      group: gateway.kgateway.dev
      kind: GatewayParameters
  listeners:
    - name: https-wildcard-airpay-com
      protocol: HTTPS
      port: 443
      hostname: "*.airpay.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls-secret-external-airpay
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-default-internal
  namespace: platform-gateways
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      name: https-default-gw-internal-params
      group: gateway.kgateway.dev
      kind: GatewayParameters
  listeners:
    - name: https-wildcard-airpay-com
      protocol: HTTPS
      port: 443
      hostname: "*.airpay.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls-secret-internal-airpay
      allowedRoutes:
        namespaces:
          from: All
